--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -18,7 +18,7 @@
 
 <body class="main-bg">
     <aside class="menu white-bg">
-        <section class="main-content menu-content">
+        <div class="main-content menu-content">
             <h1>
                 <a href="#">DOAÇÃO DE PLANTAS</a>
             </h1>
@@ -31,14 +31,29 @@
                     <li><a href="#">Login</a></li>
                 </ul>
             </nav>
-        </section>
+        </div>
     </aside>
 
-    <section class="section"></section>
-    <section class="section"></section>
+    <div class="menu-spacing"></div>
+
+    <section class=" inicio main-bg section">
+        <div class="main-content-inicio inicio-content">
+            <div class="inicio-text-content posicao-texto-inicio">
+                <h2>Cadastre-se e adote uma planta</h2>
+                <p>Traga vida ao seu espaço! Inscreva-se e faça parte de uma comunidade que cuida do planeta. Adote uma
+                    planta e
+                    cultive um futuro mais verde.</p>
+            </div>
+            <div class="inicio-img">
+                <img src="../img/planta.png" alt="Duas mãos que estão segurando folhas de uma planta">
+            </div>
+        </div>
+    </section>
+
+    <section class="white-bg section"></section>
 
 
-    <script src="js/mobile-navbar.js"></script>
+<script src="js/mobile-navbar.js"></script>
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
