Ajustes na tela inicial

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -50,7 +50,85 @@
         </div>
     </section>
 
-    <section class="white-bg section"></section>
+    <section id="sobre-web" class="white-bg section">
+        <div class="main-content sobre-content">
+            <h2>Sobre</h2>
+            <br>
+            <p>
+                Nosso objetivo é conectar pessoas apaixonadas por plantas e dispostas a contribuir para um mundo mais
+                verde.
+                Através de nossa plataforma, você pode adotar plantas de diversas espécies, desde pequenas mudas até
+                árvores
+                já crescidas, todas prontas para trazer um toque de natureza ao seu ambiente.
+            </p>
+            <p>
+                Acreditamos que cada planta faz a diferença. Além de embelezar espaços, elas purificam o ar, aumentam o
+                bem-estar e nos conectam com a natureza. Queremos criar uma rede de doadores e adotantes que
+                compartilhem
+                esse amor pelas plantas e estejam comprometidos em cuidar do meio ambiente.
+            </p>
+            <p>
+                Junte-se a nós e faça parte dessa comunidade. Juntos, podemos cultivar um futuro mais verde e
+                sustentável.
+            </p>
+        </div>
+    </section>
+
+    <section id="contact" class="inicio main-bg section">
+        <div class="main-content-contact inicio-content">
+            <div class="inicio-text-content">
+                <h2>Fale Comigo</h2>
+                <p>
+                    Estamos aqui para ajudar você a encontrar a planta ideal para adotar ou tirar dúvidas sobre o processo de doação.
+                    Se precisar de mais informações, sugestões ou quiser compartilhar sua experiência conosco, preencha o formulário
+                    abaixo. Queremos ouvir você e colaborar para que juntos possamos criar um ambiente mais verde e sustentável.
+                </p>
+            </div>
+            <div class="contato-img">
+                <img src="../img/img-contato.svg" alt="Logo de HTML, CSS e JS.">
+            </div>
+            <div class="contact-form">
+                <fieldset class="form-grid">
+                    <div class="form-group">
+                        <label for="first-name">Nome</label>
+                        <input type="text" name="first-name" id="first-name">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="last-name">Sobrenome</label>
+                        <input type="text" name="last-name" id="last-name">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="email">E-mail</label>
+                        <input type="email" name="email" id="email">
+                    </div>
+
+                    <div class="form-group full-width">
+                        <label for="message">Mensagem</label>
+                        <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                    </div>
+
+                    <div class="form-group full-width">
+                        <button type="submit">Enviar Mensagem</button>
+                    </div>
+                </fieldset>
+            </div>
+        </div>
+    </section>
+
+    </section>
+
+    <footer id="footer" class="footer white-bg">
+        <div class="row align-items-center">
+            <div class="col-sm-6">
+                <p>Copyright
+                    <script>document.write(new Date().getFullYear())</script> &copy; <a href="https://pedrolima.tech/"
+                                                                                        target="_blank">Pedro Lima</a>
+                </p>
+            </div>
+        </div>
+    </footer>
 
 
 <script src="js/mobile-navbar.js"></script>
