--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -10,10 +10,12 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 html{
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 
 body{
@@ -32,6 +34,7 @@ h1{
 
 h2{
     font-size: 5.5rem;
+    text-transform: uppercase;
 }
 
 h3{
@@ -54,6 +57,10 @@ a{
     text-decoration: none;
 }
 
+p{
+    margin-bottom: 3rem;
+}
+
 /* Classes */
 .main-bg{
     background-image: url('../img/main-bg.svg');
@@ -64,38 +71,64 @@ a{
 
 .white-bg{
     background: var(--white-color);
+    color: var(--primary-color);
 }
 
 .main-content{
     max-width: 120rem;
     margin: 0 auto;
+    /* padding: 8rem var(--gap); */
     padding: var(--gap);
     color: var(--primary-color);
 }
 
 .main-content-inicio{
-    /* max-width: 120rem; */
     margin: 0 auto;
     padding: var(--gap);
     color: var(--white-color);
 }
 
+.main-content-contact{
+    max-width: 120rem;
+    margin: 0 auto;
+    /* padding: 8rem var(--gap); */
+    padding: var(--gap);
+    color: var(--white-color);
+}
+
+.section-inicio {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    overflow: hidden;
+}
+
 .section{
-    min-height: 100vb;
+    min-height: 100vh;
 }
 
 .menu-spacing{
     height: 65px;
 }
 
+body .full-width {
+    width: 100%;
+    flex: 1 1 100%;
+  }
+
 /* Menu */
-.menu{
+.menu {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     width: 100%;
     border-bottom: 0.1rem solid var(--light-gray-color);
+    z-index: 1000; /* Adicione esta linha */
+    background-color: var(--white-color); /* Garante que a navbar tenha um fundo */
+    opacity: 0.95; /* Torna a navbar ligeiramente translúcida */
 }
 
 .menu-content{
@@ -145,17 +178,25 @@ a{
 
 .inicio-content{
     position: relative;
-    top: -8rem;
+    top: 0rem;
     display: grid;
-    grid-template-columns: 3.32fr 2fr;
+    grid-template-columns: 2.95fr 2fr;
     gap: var(--gap);
-    height: 100vh;
+    min-height: 100vh;
     padding-right: 0;
 }
 
 .posicao-texto-inicio {
     position: relative;
-    top: -5rem;
+    top: -10rem;
+}
+
+.inicio-img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 110%;
 }
 
 .inicio-text-content, .inicio-img{
@@ -170,7 +211,144 @@ a{
     margin-bottom: 2rem;
 }
 
-.inicio-img img{
-    max-width: 100%;
-    height: auto;
+.inicio-img img {
+    height: 108%;
+    width: auto;
+    object-fit: cover;
+    position: absolute;
+    bottom: 0;
+}
+
+.contato-img{
+}
+
+.sobre-content{
+    max-width: 64rem;
+    display: flex;
+    /* flex-flow: column wrap; */
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    min-height: 100vh;
+    text-align: center;
+}
+
+.contact-form{
+    grid-column: span 2;
+}
+
+.contact-form .form-grid{
+    border: none;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: var(--gap);
+}
+
+.form-group{
+    min-width: 320px;
+    flex: 1 1 auto;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 1rem;
+}
+
+.form-group input,
+.form-group textarea {
+  border: none;
+  background: var(--white-color);
+  padding: 1.5rem 2rem;
+  width: 100%;
+  font-size: 3rem;
+  outline: none;
+}
+
+.form-group button{
+    border: 0.5rem solid var(--white-color);
+    background: none;
+    color: var(--white-color);
+    padding: 1.5rem 2rem;
+    font-size: 3rem;
+    cursor: pointer;
+    transition: all 300ms ease-in-out;
+}
+
+.form-group button:hover{
+    background: var(--white-color);
+    color: var(--primary-color);
+}
+
+.footer{
+    text-align: center;
+}
+
+.footer p{
+    color: black;
+}
+
+/* Ajustes para a seção de contato */
+@media screen and (max-width: 768px) {
+    .main-content-contact {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 0 2rem; /* Adiciona padding para as laterais */
+    }
+
+    .main-content-contact .inicio-text-content,
+    .main-content-contact img,
+    .contact-form {
+        max-width: 100%;
+        width: 100%;
+    }
+
+    .inicio-img img {
+        height: auto;
+        width: 100%;
+    }
+
+    .form-grid {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .form-group {
+        width: 100%;
+    }
+}
+
+/* Ajustes gerais para manter margem nas laterais */
+.main-content {
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+
+.inicio-content,
+.sobre-content,
+.main-content-contact {
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+
+@media (max-width: 800px) {
+    .inicio-content {
+        grid-template-columns: 1fr;
+        text-align: center; /* Centraliza o texto */
+    }
+
+    .inicio-img {
+        display: none; /* Esconde a imagem */
+    }
+
+    .contato-img {
+        display: none; /* Esconde a imagem */
+    }
+
+    .inicio-text-content {
+        text-align: center; /* Centraliza o texto */
+        padding: 2rem; /* Adiciona um padding para espaçamento */
+    }
 }
