--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="main-bg">
+<body>
     <aside class="menu white-bg">
         <div class="main-content menu-content">
             <h1>
@@ -120,15 +120,11 @@
     </section>
 
     <footer id="footer" class="footer white-bg">
-        <div class="row align-items-center">
-            <div class="col-sm-6">
-                <p>Copyright
-                    <script>document.write(new Date().getFullYear())</script> &copy; <a href="https://pedrolima.tech/"
-                                                                                        target="_blank">Pedro Lima</a>
-                </p>
-            </div>
-        </div>
+        <p class="footer">Copyright
+            <script>document.write(new Date().getFullYear())</script> &copy; <a href="https://pedrolima.tech/" target="_blank">Pedro Lima</a>
+        </p>
     </footer>
+
 
 
 <script src="js/mobile-navbar.js"></script>
