--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -43,6 +43,10 @@
                 <p>Traga vida ao seu espaço! Inscreva-se e faça parte de uma comunidade que cuida do planeta. Adote uma
                     planta e
                     cultive um futuro mais verde.</p>
+                <div class="button-container">
+                    <a href="#" class="button"><span>Cadastre-se</span></a>
+                    <a href="#" class="button login-button"><span>Login</span></a>
+                </div>
             </div>
             <div class="inicio-img">
                 <img src="../img/planta.png" alt="Duas mãos que estão segurando folhas de uma planta">
@@ -139,5 +143,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
             integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
             crossorigin="anonymous"></script>
+    <script src="../js/effectButton.js"></script>
 </body>
 </html>
