Criação dos controllers principais

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -27,7 +27,7 @@
                 <li><a href="#inicio-web">Início</a></li>
                 <li><a href="#sobre-web">Sobre</a></li>
                 <li><a href="#contact">Contato</a></li>
-                <li><a href="#login">Login</a></li>
+                <li><a href="/login">Login</a></li>
             </ul>
         </nav>
     </div>
@@ -43,8 +43,8 @@
                 planta e
                 cultive um futuro mais verde.</p>
             <div class="button-container">
-                <a href="#" class="button"><span>Cadastre-se</span></a>
-                <a href="#" class="button login-button"><span>Login</span></a>
+                <a href="/cadastroUsuario" class="button"><span>Cadastre-se</span></a>
+                <a href="/login" class="button login-button"><span>Login</span></a>
             </div>
         </div>
         <div class="inicio-img">
